--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = qt6translations
-url = https://download.qt.io/official_releases/qt/6.6/6.6.2/submodules/qttranslations-everywhere-src-6.6.2.tar.xz
+url = https://download.qt.io/official_releases/qt/6.6/6.6.3/submodules/qttranslations-everywhere-src-6.6.3.tar.xz
 archives = 
 giturl = 
 domain = 
@@ -64,7 +64,7 @@ so_to_lib = false
 # configure build for apx
 use_apx = false
 # configure build for avx2
-use_avx2 = true
+use_avx2 = false
 # configure build for avx512
 use_avx512 = false
 # add clang flags
